--- a/fifa-fantasy-batch/pom.xml
+++ b/fifa-fantasy-batch/pom.xml
@@ -4,8 +4,12 @@
   <groupId>org.example</groupId>
   <artifactId>fifa-fantasy-batch</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <name>fifa-fantasy-batch</name>
-  <build>
+	<packaging>pom</packaging>
+	<name>fifa-fantasy-batch</name>
+	<modules>
+		<module>StreamingLayer</module>
+	</modules>
+	<build>
     <sourceDirectory>src/main/scala</sourceDirectory>
     <testSourceDirectory>src/test/scala</testSourceDirectory>
 
